# Xfweb

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
profiles/: api_security.yaml  auth_test.yaml  fast_scan.yaml  full_audit.yaml  owasp_top10.yaml
src/xfweb/: __init__.py
src/xfweb/ai/: __init__.py  engine.py
src/xfweb/cli/: __init__.py  main.py
src/xfweb/core/: __init__.py
src/xfweb/core/controllers/: __init__.py  plugin_manager.py  strategy.py  w3af_core.py
src/xfweb/core/data/: __init__.py
src/xfweb/core/data/dc/: __init__.py
src/xfweb/core/data/fuzzer/: __init__.py
src/xfweb/core/data/kb/: __init__.py  knowledge_base.py
src/xfweb/core/data/parsers/: __init__.py  param_extractor.py
src/xfweb/core/data/request/: __init__.py
src/xfweb/core/data/url/: __init__.py  fuzzable_request.py
src/xfweb/core/net/: __init__.py  http_engine.py
src/xfweb/core/plugins/: __init__.py  plugin_base.py
src/xfweb/core/ui/: __init__.py
src/xfweb/core/ui/api/: __init__.py  main.py
src/xfweb/core/ui/console/: __init__.py
src/xfweb/core/ui/dashboard/: __init__.py  index.html
src/xfweb/plugins/: __init__.py
src/xfweb/plugins/ai/: __init__.py  smart_detection.py
src/xfweb/plugins/api/: __init__.py
src/xfweb/plugins/attack/: __init__.py
src/xfweb/plugins/audit/: __init__.py  buffer_overflow.py  crlf_injection.py  csrf.py  eval.py  file_upload.py  format_string.py  frontpage.py  global_redirect.py  host_header_injection.py  htaccess_methods.py  lfi.py  open_redirect.py  os_commanding.py  redos.py  rfi.py  sqli.py  ssl_certificate.py  ssrf.py  xss.py  xxe.py
src/xfweb/plugins/auth/: __init__.py  oauth2_jwt.py
src/xfweb/plugins/bruteforce/: __init__.py  basic_auth.py  form_auth.py
src/xfweb/plugins/crawl/: __init__.py  bing_spider.py  dir_file_bruter.py  dir_listing.py  dot_ds_store.py  find_backdoors.py  google_spider.py  open_api.py  phpinfo.py  playwright_spider.py  robots_txt.py  sitemap_xml.py  web_spider.py
src/xfweb/plugins/evasion/: __init__.py  rnd_case.py  rnd_hex_encode.py  x_forwarded_for.py
src/xfweb/plugins/graphql/: __init__.py  introspection.py
src/xfweb/plugins/grep/: __init__.py  analyze_cookies.py  click_jacking.py  credit_cards.py  csp.py  error_500.py  get_emails.py  html_comments.py  meta_tags.py  password_profiling.py  path_disclosure.py  private_ip.py  strange_headers.py  url_session.py
src/xfweb/plugins/grpc/: __init__.py
src/xfweb/plugins/infrastructure/: __init__.py  allowed_methods.py  detect_reverse_proxy.py  fingerprint_os.py  fingerprint_waf.py  server_header.py  shared_hosting.py
src/xfweb/plugins/mangle/: __init__.py
src/xfweb/plugins/output/: __init__.py  csv_file.py  html_file.py  json_file.py  sarif.py
src/xfweb/plugins/websocket/: __init__.py  hijacking.py
tests/: __init__.py  test_ai.py  test_cli_api.py  test_core.py  test_http.py  test_new_features.py  test_plugins.py
